Minor changes in Section 10

--- a/aip.tex
+++ b/aip.tex
@@ -2769,9 +2769,9 @@ $\{ \lambda_{r^s}(\matA, \vv{u}) \}_{s=1}^{\infty}$ and $\{ \eta_{r^s}(\matA, \v
    \[\crit(\ideala,\ideald) = \frac{624}{773} - \frac{\num{1551}}{\num{681013} p} - \frac{\num{2794}}{\num{22025} p^3}.\]
 \end{example}
 
-\subsection{Concerning non-leading coefficients}
+\subsection{Concerning the fundamental sequences}
 
-We now address the nonpositivity of the non-leading coefficients, claimed in \Cref{main theorem wrt diagonal: T}.
+We now turn our focus to the fundamental sequences considered in \Cref{fundamental-sequences: D}.
 
 \begin{lemma}
    \label{non-leading coefficients: L}
@@ -2875,6 +2875,7 @@ where $\big(\sigma_{p^i}(\ideala,\ideald) \big)_{i=1}^{\infty}$ is a sequence of
    Find appropriate places for the next statement.  Proof calls upon \Cref{non-leading coefficients: L}.
 }
 
+\daniel[inline]{Restate in terms of the fundamental sequences?}
 \begin{proposition}[A simple special case]
 	\label{simple-special: P}
    Given a monomial matrix $\matA$, fix a universal denominator $\denom$ for all the finitely many descendants of $\matA$.
